BackupCursorService error case double-locks mutex

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.1.3
    • Affects Version/s: None
    • Component/s: Storage
    • None
    • Fully Compatible
    • ALL
    • Storage NYC 2018-08-27
    • 2
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Opening a backup cursor acquires a mutex to protect some basic state. After opening a cursor, the state is changed. However, the opening process can still fail with uasserts, so a scopeguard is registered to undo the opening operation. But, closing the backup cursor also acquires the state protecting mutex.

            Assignee:
            Daniel Gottlieb (Inactive)
            Reporter:
            Daniel Gottlieb (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: