SERVER-36711: Avoid double locking mutex in ScopeGuard destruction.